--- a/css/component/login.css
+++ b/css/component/login.css
@@ -1,3 +1,8 @@
+body {
+  background-color: rgb(255, 235, 51);
+  color: rgb(121, 114, 49);
+}
+
 /* 전체 Log-In Input Field 전체 적용 CSS */
 #loginForm {
   display: flex; /* display에 flex 적용 -> Width만큼 가로로 배치*/
@@ -55,4 +60,12 @@
 .logo > img {
   height: 100px;
   width: 120px;
+}
+
+#logo {
+  display: block;
+  margin: auto;
+
+  height: 20%;
+  width: 40%;
 }
