--- a/css/component/chats.css
+++ b/css/component/chats.css
@@ -1,57 +1,9 @@
+@import "sideBar.css";
+@import "mainFrame.css";
+
 body {
   background-color: white;
   margin: 0px 0px;
-}
-.sideBar {
-  width: 18%;
-  height: 100%;
-  background-color: rgb(236, 236, 237);
-  color: rgb(172, 173, 177);
-
-  display: flex;
-  flex-direction: column;
-
-  position: fixed;
-  /* position: absolute; */
-}
-.menuTop {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  height: 50%;
-  margin: 0px 0px;
-}
-.menuTop > div {
-  margin-top: 40px;
-}
-.menuBot {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  height: 50%;
-  margin: 0px 0px;
-}
-.menuBot > div {
-  margin-bottom: 30px;
-}
-.friends {
-  margin-left: 18%;
-  height: 100%;
-}
-.friends_header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 5%;
-}
-.friends_header_item {
-  margin: auto 20px;
-}
-.friends_header_btn {
-  border: none;
-  background: none;
 }
 
 .userProfile {
@@ -73,7 +25,8 @@ body {
   margin-left: 10px;
 }
 
-.friends_list_section {
+.chat_list_section {
+  margin-top: 20px;
   margin-left: 10px;
   border-bottom: 1px solid rgb(242, 242, 242);
 }
@@ -83,7 +36,7 @@ body {
   color: rgb(127, 127, 127);
 }
 .friendsProfile {
-  margin: 10px 0px;
+  margin: 20px 0px;
   display: flex;
   align-items: center;
 }
