--- a/css/component/chats.css
+++ b/css/component/chats.css
@@ -35,7 +35,7 @@ body {
   padding: 10px 0px;
   color: rgb(127, 127, 127);
 }
-.friendsProfile {
+.chatBox {
   margin: 20px 0px;
   display: flex;
   align-items: center;
@@ -48,9 +48,20 @@ body {
   border-color: rgb(242, 242, 242);
 }
 .friendsName {
+  margin: 0px 0px;
+  padding: 0px 0px;
   margin-left: 10px;
 }
-.sideBar_btn {
+
+.previewMsg {
+  margin: 0px 0px;
+  padding: 0px 0px;
+  margin-top: 8px;
+  margin-left: 10px;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+/* .sideBar_btn {
   border: none;
   background: none;
 
@@ -59,4 +70,9 @@ body {
 
 #sideBar_btn_now {
   color: rgb(52, 55, 64);
+} */
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
