changes in laptop 220613

--- a/css/component/chats.css
+++ b/css/component/chats.css
@@ -1,5 +1,5 @@
-@import "sideBar.css";
-@import "mainFrame.css";
+/* @import "sideBar.css";
+@import "mainFrame.css"; */
 
 body {
   background-color: white;
