--- a/css/component/login.css
+++ b/css/component/login.css
@@ -3,7 +3,28 @@ body {
   color: rgb(121, 114, 49);
 }
 
-/* 전체 Log-In Input Field 전체 적용 CSS */
+
+/* --------------- Logo ---------------  */
+.logo {
+  text-align: center;
+  margin-top: 20%;
+  margin-bottom: 20px;
+}
+.logo > img {
+  height: 100px;
+  width: 120px;
+}
+
+#logo {
+  display: block;
+  margin: auto;
+
+  height: 20%;
+  width: 40%;
+}
+
+
+/* --------------- Log In Form ---------------  */
 #loginForm {
   display: flex; /* display에 flex 적용 -> Width만큼 가로로 배치*/
   flex-direction: column; /* flex 방향 설정 -> row : 가로 | column : 세로 */
@@ -38,34 +59,25 @@ body {
 #loginForm label {
   font-size: 13px;
 }
-/* 하단 계정 / 비번 찾기 적용  */
-/* div에 대한 설정  */
-.userServices {
+
+.question_button{
+  color: rgb(173, 161, 47);
+}
+
+
+/* --------------- additionalLogInServices ---------------  */
+.additionalLogInServices {
   margin-top: 40%;
   text-align: center;
 }
 /* <a>에 대한 설정 */
-.userServices > a {
-  text-decoration: none; /*하이퍼링크 Underline 제거 */
+.additionalLogInServices > a {
   color: rgb(121, 114, 49);
   font-size: 13px;
 }
 
-/* Logo 적용  */
-.logo {
-  text-align: center;
-  margin-top: 20%;
-  margin-bottom: 20px;
-}
-.logo > img {
-  height: 100px;
-  width: 120px;
-}
 
-#logo {
-  display: block;
-  margin: auto;
-
-  height: 20%;
-  width: 40%;
+/* --------------- standard-bar_button_item ---------------  */
+.standard-bar_button_item {
+  color: rgb(173, 161, 47);
 }
