--- a/css/component/sideBar.css
+++ b/css/component/sideBar.css
@@ -1,15 +1,18 @@
 .sideBar {
-  width: 15%;
+  width: 15%;                                /* Side Bar 차지 비율 */
   height: 100%;
   background-color: rgb(236, 236, 237);
   color: rgb(172, 173, 177);
 
-  display: flex;
+  display: flex;                            /* menuTop / menuBot 배치 설정 -> 세로 */
   flex-direction: column;
 
-  position: fixed;
+  position: fixed;                          /* Side Bar 고정 -> 스크롤 시 이동하지 않음 */
   /* position: absolute; */
 }
+
+
+/* --------------- Side bar 위쪽 ---------------  */
 .menuTop {
   display: flex;
   flex-direction: column;
@@ -21,6 +24,8 @@
 .menuTop > div {
   margin-top: 40px;
 }
+
+/* --------------- Side bar 아래 ---------------  */
 .menuBot {
   display: flex;
   flex-direction: column;
@@ -33,10 +38,9 @@
   margin-bottom: 30px;
 }
 
-.sideBar_btn {
-  border: none;
-  background: none;
 
+/* --------------- Side bar 버튼 전체 ---------------  */
+.sideBar_btn {
   color: rgb(172, 173, 177);
 }
 
