--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,20 @@
-@import "component/status-bar.css";
-@import "component/login.css";
+@import "component/standard-bar.css";
+@import "component/sideBar.css";
+@import "component/mainFrame.css";
+
+/*friendList 사용*/
+@import "component/userProfile.css";
+@import "component/friendProfile.css";
+
+
+
+/* ----- 공통 CSS 설정 -------*/
+a {
+    text-decoration: none; /*하이퍼링크 Underline 제거 */
+}
+
+
+.button {
+  border: none;            /* _button_item 테두리 제거 */
+  background: none;        /* _button_item 배경색 제거 */
+}
