--- a/css/component/mainFrame.css
+++ b/css/component/mainFrame.css
@@ -7,7 +7,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 5%;
+  /* margin-top: 5%; */
+  margin: 15px 0px;
 }
 .main_header_item {
   margin: auto 20px;
