--- a/css/styles.css
+++ b/css/styles.css
@@ -2,19 +2,26 @@
 @import "component/sideBar.css";
 @import "component/mainFrame.css";
 
-/*friendList 사용*/
-@import "component/userProfile.css";
-@import "component/friendProfile.css";
-
-
+/*friendList & chatList 사용*/
+@import "component/userBox.css";
+@import "component/friendBox.css";
 
 /* ----- 공통 CSS 설정 -------*/
 a {
-    text-decoration: none; /*하이퍼링크 Underline 제거 */
+  text-decoration: none; /*하이퍼링크 Underline 제거 */
 }
 
-
 .button {
-  border: none;            /* _button_item 테두리 제거 */
-  background: none;        /* _button_item 배경색 제거 */
+  border: none; /* _button_item 테두리 제거 */
+  background: none; /* _button_item 배경색 제거 */
+}
+
+.list_section {
+  margin-left: 20px;
+  border-bottom: 1px solid rgb(242, 242, 242);
+}
+.section_label {
+  font-size: 13px;
+  padding: 10px 0px;
+  color: rgb(127, 127, 127);
 }
