--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -3,85 +3,88 @@ body {
   margin: 0px 0px;
 }
 
-.reply {
+#chatScrHeader {
+  top: 0;
   position: fixed;
-  bottom: 0;
   width: 100%;
-  background-color: white;
+  background-color: rgb(169, 189, 206);
+
+  box-sizing: border-box;
+  margin: 0px 0px;
+  padding: 10px;
+  display: flex;
+}
+
+.header_row {
   display: flex;
   justify-content: space-between;
-  padding: 5px 25px;
-  box-sizing: border-box;
   align-items: center;
-  transition: transform 0.3s ease-in-out;
 }
 
-.reply .reply_column:first-child {
+.header_column:first-child {
+  width: 15%;
+}
+.header_column:last-child {
   width: 85%;
 }
-.reply .reply_column:last-child {
-  width: 15%;
-  position: relative;
+.iconGroup:first-child {
+  margin-left: 10px;
+}
+.iconGroup:last-child {
+  margin-right: 5px;
 }
 
-.reply i {
-  opacity: 0.5;
+.reply {
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  background-color: white;
+  margin: 0px 0px;
+  padding: 10px 10px;
+  box-sizing: border-box;
+
+  color: rgb(172, 173, 177);
+}
+
+.reply_row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  margin: 5px 0px;
+}
+
+.reply_column:first-child {
+  width: 80%;
+}
+.reply_column:last-child {
+  width: 15%;
 }
 
 .reply input {
   padding: 14px;
   width: 100%;
-  border: var(--main-border);
-  border-radius: 25px;
-  box-sizing: border-box;
-  transition: all 0.3s ease-in-out;
-}
-
-.reply__column:last-child > i,
-.reply__column:last-child button {
-  position: absolute;
-  right: 3px;
-  top: 3px;
-}
-
-.reply__column:last-child > i {
-  right: 50px;
-  top: 15px;
-}
-
-.reply__column button {
-  background-color: var(--yellow);
-  border: none;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-
-.reply__column button i {
-  opacity: 1;
-}
-.reply__column button:focus,
-.reply__column button:active {
-  outline: none;
-}
-
-.reply .reply__column:first-child,
-.reply .fa-smile-wink,
-.reply button {
-  transition: opacity 0.3s ease-in-out;
-}
-
-.reply:focus-within .reply__column:first-child,
-.reply:focus-within .fa-smile-wink,
-.reply:focus-within button {
-  opacity: 0;
+  border: 0;
 }
 
 .reply input:focus {
-  width: 98vw;
-  transform: translateX(-13%) translateY(-80px);
+  outline: none;
 }
 
-.reply:focus-within {
-  transform: translateY(80px);
+.reply_column button {
+  background-color: rgb(255, 236, 66);
+  border-style: solid;
+  border-color: rgb(232, 215, 63);
+  width: 55px;
+  height: 33px;
+}
+
+input[type="range"] {
+  /* -webkit-appearance: none; */
+
+  width: 100%;
+  height: 1px;
+  cursor: pointer;
+  padding: 0;
+  accent-color: rgb(172, 173, 177);
 }
